# CareerScout-AI

./: .env.example  .gitignore  .lintstagedrc.json  ARCHITECTURE.md  DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: ci.yml
apps/ai-engine/: Dockerfile  pyproject.toml
apps/ai-engine/app/: main.py  scoring.py
apps/ai-engine/app/providers/: base.py  factory.py  gemini.py
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: db.py  dependencies.py  main.py  models.py  schemas.py  security.py  settings.py
apps/api/app/routers/: auth.py  cvs.py  jobs.py  matches.py
apps/api/app/services/: ai_client.py
apps/scheduler/: Dockerfile  pyproject.toml
apps/scheduler/app/: main.py
apps/web/: Dockerfile  package.json  tailwind.config.ts
