[project]
name = "careerscout-monorepo"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
  "apps/api",
  "apps/worker",
  "apps/scheduler",
  "apps/ai-engine",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
