[project]
name = "careerscout-ai-engine"
version = "0.1.0"
description = "CareerScout AI engine service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.0",
  "httpx>=0.27.2"
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
