[project]
name = "careerscout-api"
version = "0.1.0"
description = "CareerScout AI API service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.36",
  "asyncpg>=0.30.0",
  "python-jose[cryptography]>=3.3.0",
  "httpx>=0.27.2",
  "redis>=5.2.0",
  "python-multipart>=0.0.17",
  "email-validator>=2.2.0"
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
