[project]
name = "careerscout-scheduler"
version = "0.1.0"
description = "CareerScout scheduler service"
requires-python = ">=3.12"
dependencies = [
  "redis>=5.2.0",
  "apscheduler>=3.10.4"
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
